--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Angular2Reddit</title>
+    <title>Angular-reddit</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,8 +13,8 @@
     <div class="ui menu">
       <div class="ui container">
         <a href="#" class="header item">
-          <img class="logo" src="/assets/images/ng-book-2-minibook.png" />
-          ng-book
+          <img class="logo" src="/assets/images/reddit.jpg" />
+          Reddit
         </a>
         <div class="header item borderless">
           <h1 class="ui header">
